--- a/index.html
+++ b/index.html
@@ -3,209 +3,109 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Pokemon Platinum</title>
-  <style>
-    html, body { height: 100%; margin: 0; background: #000; overflow: hidden; font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif; }
-    desmond-player { position: fixed; inset: 0; width: 100%; height: 100%; display: block; }
-    .hud { position: fixed; top: 12px; left: 12px; right: 12px; display: flex; justify-content: space-between; gap: 10px; z-index: 50; pointer-events: none; }
-    .hud .group { display: flex; gap: 10px; pointer-events: auto; }
-    .btn { border: 1px solid rgba(255,255,255,.18); background: rgba(10,10,10,.90); color: rgba(255,255,255,.92); padding: 10px 12px; border-radius: 12px; cursor: pointer; font-weight: 800; user-select: none; }
-    .btn:active { transform: translateY(1px); }
-    #loader { position: fixed; inset: 0; background: #000; display: grid; place-items: center; z-index: 100; }
-    .card { width: min(560px, calc(100vw - 28px)); border: 1px solid rgba(255,255,255,.18); border-radius: 16px; background: #0a0a0a; padding: 18px; color: rgba(255,255,255,.92); }
-    .row { display:flex; justify-content:space-between; align-items:center; gap: 10px; }
-    .title { font-weight: 900; letter-spacing:.2px; }
-    .chip { font-size: 12px; font-weight: 900; padding: 6px 10px; border-radius: 999px; border: 1px solid rgba(255,255,255,.18); background: rgba(255,255,255,.06); color: rgba(255,255,255,.75); white-space: nowrap; }
-    .sub { margin-top: 6px; color: rgba(255,255,255,.70); font-size: 13px; line-height: 1.35; }
-    .barWrap { margin-top: 14px; height: 14px; border-radius: 999px; overflow: hidden; border: 1px solid rgba(255,255,255,.18); background: rgba(255,255,255,.06); }
-    .bar { height: 100%; width: 0%; background: linear-gradient(90deg, #5bd0ff, #7dffb2); transition: width .12s ease; }
-    .meta { margin-top: 10px; display:grid; grid-template-columns: 1fr 1fr; gap:10px; font-size: 13px; color: rgba(255,255,255,.70); }
-    .meta strong { color: rgba(255,255,255,.92); font-weight: 900; }
-    .note { margin-top: 12px; font-size: 12px; color: rgba(255,255,255,.58); line-height: 1.35; }
-    #modalBack { position: fixed; inset: 0; background: rgba(0,0,0,.86); display:none; z-index:200; padding:18px; overflow:auto; }
-    #modal { margin: 40px auto; width: min(720px, 100%); border: 1px solid rgba(255,255,255,.18); border-radius: 18px; background: #0a0a0a; padding: 18px; color: rgba(255,255,255,.92); }
-    .modalHeader{ display:flex; align-items:center; justify-content:space-between; gap:12px; margin-bottom:12px; }
-    .modalHeader h2 { margin: 0; font-size: 18px; }
-    .grid { display:grid; grid-template-columns: 1fr 1fr; gap:10px; }
-    .panel { border: 1px solid rgba(255,255,255,.18); border-radius: 14px; padding: 12px; background: rgba(255,255,255,.04); }
-    .panel h3 { margin: 0 0 8px; font-size: 13px; text-transform: uppercase; letter-spacing: .9px; color: rgba(255,255,255,.72); }
-    .krow { display:flex; justify-content:space-between; gap:10px; padding:6px 0; border-bottom:1px solid rgba(255,255,255,.10); }
-    .krow:last-child{ border-bottom:0; }
-    code.k { padding: 3px 8px; border-radius: 10px; border: 1px solid rgba(255,255,255,.18); background: rgba(0,0,0,.45); font-weight: 900; }
-    @media (max-width: 720px) { .meta { grid-template-columns: 1fr; } .grid { grid-template-columns: 1fr; } }
-  </style>
+  <title>NDS Player</title>
+  <link rel="stylesheet" href="./css/app.css" />
 </head>
+
 <body>
-  <div class="hud"><div class="group"><button class="btn" id="btnControls">Controls</button></div></div>
+  <div class="hud">
+    <div class="group">
+      <button class="btn" id="btnControls">Controls</button>
+      <button class="btn" id="btnSaves">Saves</button>
+    </div>
+    <div class="group">
+      <span class="pill" id="pillStorage">Storage: —</span>
+      <span class="pill" id="pillGame">Game: —</span>
+    </div>
+  </div>
+
   <desmond-player id="player"></desmond-player>
 
   <div id="loader">
     <div class="card">
-      <div class="row"><div class="title">Loading ROM</div><div class="chip" id="pct">0%</div></div>
+      <div class="row">
+        <div class="title">Loading ROM</div>
+        <div class="chip" id="pct">0%</div>
+      </div>
       <div class="sub" id="sub">Downloading game data…</div>
       <div class="barWrap"><div class="bar" id="bar"></div></div>
+
       <div class="meta">
         <div><strong id="dl">0 MB</strong><div>Downloaded</div></div>
         <div><strong id="eta">—</strong><div>Speed / ETA</div></div>
       </div>
-      <div class="note">Save files persist in your browser storage on this same origin.</div>
-    </div>
-  </div>
 
-  <div id="modalBack">
-    <div id="modal">
-      <div class="modalHeader"><h2>Controls</h2><button class="btn" id="btnClose">Close</button></div>
-      <div class="grid">
-        <div class="panel">
-          <h3>Keyboard</h3>
-          <div class="krow"><span>D-Pad</span><code class="k">Arrow keys</code></div>
-          <div class="krow"><span>A</span><code class="k">Z</code></div>
-          <div class="krow"><span>B</span><code class="k">X</code></div>
-          <div class="krow"><span>Y</span><code class="k">A</code></div>
-          <div class="krow"><span>X</span><code class="k">S</code></div>
-          <div class="krow"><span>L</span><code class="k">Q</code></div>
-          <div class="krow"><span>R (simulate blowing on the mic)</span><code class="k">W</code></div>
-          <div class="krow"><span>Start</span><code class="k">Enter</code></div>
-          <div class="krow"><span>Select</span><code class="k">Shift</code></div>
-          <div class="krow"><span>Menu</span><code class="k">Esc</code></div>
-        </div>
-        <div class="panel">
-          <h3>Layout</h3>
-          <div style="color:rgba(255,255,255,.78);font-size:13px;line-height:1.5">
-            Screens are <b>side-by-side</b>: left = top screen, right = bottom screen.<br><br>
-            If controls aren't responding, click the emulator once so it has keyboard focus.
-          </div>
-        </div>
+      <div class="note" id="note">
+        If controls aren’t responding, tap/click the emulator once to focus it.
       </div>
     </div>
   </div>
 
-  <script src="https://cdn.jsdelivr.net/gh/Unzor/desmond/cdn/desmond.min.js"></script>
-  <script>
-    const ROM_URL = "https://files.catbox.moe/35lx11.nds";
-    const el = (id) => document.getElementById(id);
+  <!-- Modal Backdrop -->
+  <div id="modalBack" hidden>
+    <div id="modal">
+      <div class="modalHeader">
+        <h2 id="modalTitle">Controls</h2>
+        <button class="btn" id="btnClose">Close</button>
+      </div>
 
-    const modalBack = el("modalBack");
-    el("btnControls").onclick = () => modalBack.style.display = "block";
-    el("btnClose").onclick = () => modalBack.style.display = "none";
-    modalBack.addEventListener("click", (e) => {
-      if (e.target === modalBack) modalBack.style.display = "none";
-    });
+      <!-- Controls panel -->
+      <div id="panelControls">
+        <div class="grid">
+          <div class="panel">
+            <h3>Keyboard</h3>
+            <div class="krow"><span>D-Pad</span><code class="k">Arrow keys</code></div>
+            <div class="krow"><span>A</span><code class="k">Z</code></div>
+            <div class="krow"><span>B</span><code class="k">X</code></div>
+            <div class="krow"><span>Y</span><code class="k">A</code></div>
+            <div class="krow"><span>X</span><code class="k">S</code></div>
+            <div class="krow"><span>L</span><code class="k">Q</code></div>
+            <div class="krow"><span>R</span><code class="k">W</code></div>
+            <div class="krow"><span>Start</span><code class="k">Enter</code></div>
+            <div class="krow"><span>Select</span><code class="k">Shift</code></div>
+            <div class="krow"><span>Menu</span><code class="k">Esc</code></div>
+          </div>
+          <div class="panel">
+            <h3>Layout</h3>
+            <div class="ptext">
+              Screens are <b>side-by-side</b>: left = top screen, right = bottom screen.
+              They scale to fit your window while preserving the DS aspect ratio.
+            </div>
+          </div>
+        </div>
+      </div>
 
-    function fmtMB(bytes){ return (bytes/(1024*1024)).toFixed(bytes < 10*1024*1024 ? 1 : 0) + " MB"; }
-    function fmtSpeed(bps){ if (!isFinite(bps) || bps <= 0) return "—"; const mbps = bps/(1024*1024); return mbps.toFixed(mbps < 10 ? 1 : 0) + " MB/s"; }
-    function fmtETA(sec){ if (!isFinite(sec) || sec <= 0) return "—"; const m = Math.floor(sec/60), s = Math.floor(sec%60); return (m ? `${m}m ` : "") + `${s}s`; }
+      <!-- Saves panel -->
+      <div id="panelSaves" hidden>
+        <div class="panel">
+          <h3>Battery Saves</h3>
+          <div class="ptext">
+            Desmond stores save data in browser storage. This page also provides export/import as a fallback.
+          </div>
 
-    async function fetchWithProgress(url, onProgress){
-      const r = await fetch(url);
-      if (!r.ok) throw new Error(`ROM download failed: HTTP ${r.status}`);
-      const total = Number(r.headers.get("content-length")) || 0;
+          <div class="saveRow">
+            <button class="btn" id="btnExport">Export save (.dsv)</button>
+            <label class="btn" for="importFile" style="display:inline-block;">Import save (.dsv)</label>
+            <input id="importFile" type="file" accept=".dsv,application/octet-stream" hidden />
+            <button class="btn danger" id="btnClear">Clear save</button>
+          </div>
 
-      if (r.body && r.body.getReader) {
-        const reader = r.body.getReader();
-        let received = 0;
-        while (true) {
-          const { done, value } = await reader.read();
-          if (done) break;
-          received += value.byteLength;
-          onProgress(received, total);
-        }
-      } else {
-        const buf = await r.arrayBuffer();
-        onProgress(buf.byteLength, total || buf.byteLength);
-      }
-    }
+          <div class="ptext small" id="saveStatus">Save status: —</div>
+          <div class="ptext small" id="saveKey">Save key: —</div>
+        </div>
 
-    function forceSideBySide(player){
-      const apply = () => {
-        const sr = player.shadowRoot;
-        if (!sr) return false;
+        <div class="panel" style="margin-top:12px;">
+          <h3>Notes about embeds</h3>
+          <div class="ptext small">
+            If this is embedded in a sandboxed iframe without <code>allow-same-origin</code>, storage APIs (IndexedDB/localStorage) may be blocked. :contentReference[oaicite:2]{index=2}
+            Some browsers also partition iframe storage by top-level site, which can affect embedded persistence. :contentReference[oaicite:3]{index=3}
+          </div>
+        </div>
+      </div>
 
-        let top = sr.querySelector("canvas#top");
-        let bottom = sr.querySelector("canvas#bottom");
-        if (!top || !bottom) {
-          const cvs = sr.querySelectorAll("canvas");
-          if (cvs.length >= 2) [top, bottom] = [cvs[0], cvs[1]];
-        }
-        if (!top || !bottom) return false;
+    </div>
+  </div>
 
-        const setup = (c) => {
-          c.style.position = "fixed";
-          c.style.top = "50%";
-          c.style.transformOrigin = "50% 50%";
-          c.style.imageRendering = "pixelated";
-          c.style.zIndex = "1";
-        };
-        setup(top); setup(bottom);
-
-        const resize = () => {
-          const W = window.innerWidth;
-          const H = window.innerHeight;
-          const halfW = W / 2;
-          const s = Math.min(halfW / 256, H / 192);
-          top.style.left = (halfW * 0.5) + "px";
-          bottom.style.left = (halfW * 1.5) + "px";
-          top.style.transform = `translate(-50%, -50%) scale(${s})`;
-          bottom.style.transform = `translate(-50%, -50%) scale(${s})`;
-        };
-
-        window.addEventListener("resize", resize, { passive: true });
-        resize();
-        return true;
-      };
-
-      if (apply()) return;
-      const mo = new MutationObserver(() => { if (apply()) mo.disconnect(); });
-      mo.observe(player, { childList: true, subtree: true });
-      const t = setInterval(() => {
-        if (player.shadowRoot) {
-          mo.observe(player.shadowRoot, { childList: true, subtree: true });
-          clearInterval(t);
-        }
-      }, 50);
-      setTimeout(() => clearInterval(t), 5000);
-    }
-
-    window.addEventListener("load", async () => {
-      const bar = el("bar");
-      const pct = el("pct");
-      const dl = el("dl");
-      const eta = el("eta");
-      const sub = el("sub");
-      let lastT = performance.now(), lastB = 0, ema = 0;
-
-      await fetchWithProgress(ROM_URL, (received, total) => {
-        const now = performance.now();
-        const dt = (now - lastT) / 1000;
-        if (dt >= 0.25) {
-          const db = received - lastB;
-          const inst = db / dt;
-          ema = ema ? (ema * 0.75 + inst * 0.25) : inst;
-          lastT = now;
-          lastB = received;
-        }
-
-        const p = total ? Math.min(1, received / total) : 0;
-        bar.style.width = total ? (p * 100).toFixed(1) + "%" : "18%";
-        pct.textContent = total ? Math.floor(p * 100) + "%" : "…";
-        dl.textContent = total ? `${fmtMB(received)} / ${fmtMB(total)}` : fmtMB(received);
-        const e = (total && ema > 0) ? (total - received) / ema : NaN;
-        eta.textContent = `${fmtSpeed(ema)} • ETA ${fmtETA(e)}`;
-      });
-
-      sub.textContent = "Initializing emulator…";
-      const player = el("player");
-
-      // IMPORTANT: load using stable remote URL (not blob URL), so Desmond can reuse
-      // the same browser save key across sessions.
-      player.loadURL(ROM_URL, () => {
-        el("loader").style.display = "none";
-        forceSideBySide(player);
-      });
-
-      setTimeout(() => forceSideBySide(player), 1200);
-      setTimeout(() => { el("loader").style.display = "none"; }, 2500);
-    });
-  </script>
+  <script type="module" src="./js/main.js"></script>
 </body>
 </html>
